export type Materia = {
  id: number;
  nome: string;
  descricao: string;
  corDestaque?: string;
};
