export type Registro = {
  id: number;
  materiaId: number;
  topicoId?: number;
  descricao?: string;
  data: string;
};
