export type Topico = {
  id: number;
  nome: string;
  materiaId: number;
  concluido: boolean;
};
